gcc/testsuite/g++.dg/conversion/const3.C
// PR c++/18177

void foo()
{
  X; // { dg-error "" }
  const_cast<int&>(X);
}
